# School-Projects

./: .gitignore  README.md
9GRA/: README.md
9GRA/src/: knight_tour.py  main.py  pyproject.toml
MPC-MID/: README.md  ampl_ident.mat  ident_ident.sid  juricek_200543.m  odezva_2021.p
VA1/: README.md
VA1/DC_motor-testing/: DCmotor.slx
VA1/Smokehouse/: constants.m  smokehouse.slx
VAI/: README.md
VAI/path_planning/: CMakeLists.txt  package.xml
VAI/path_planning/src/: a_star.py  graph.py  heuristic.py  motion_planning.py  rrt.py  run.py
VBC/: LICENSE  README.md
VBC/task_2/: Task_VBC.mlx
VBC/task_3/: ga.py  hc12.py  main.py  obj_func.py  params.py
VBC/task_4/: bat_algo.py  main.py  params.py  pyproject.toml
VOB/: README.md
VOB/src/: Numcpp_light.hpp  README.md  main  main.cpp  nump_light_cpp.hpp
VRM/: README.md
VRM/Project_2/videos/: .gitignore
VSC/: README.md
VSC/project_1/: data.csv  graph.py  gui.py  net.py  out.py
VSC/project_1/logs/fit/20210419-123039/train/: events.out.tfevents.1618828239.juricekm-desktop.24575.1514.v2  events.out.tfevents.1618828240.juricekm-desktop.profile-empty
VSC/project_1/net_model/: saved_model.pb
VSC/project_1/net_model/variables/: variables.data-00000-of-00001  variables.index
VSC/project_2/: ann.py  graph.py  gui.py
VSG/: README.md
VSG/Assignment/: 200543
VSG/Project/src/: juricek_200543.m
VZI/: README.md
VZI/src/: app.py  database.py  dijkstra.py  pyproject.toml
VZI/src/data/: airports_location.json  flights_data.json
(+10 files in other folders)
