[tool.poetry]
name = "projects"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pygame = "^2.1.2"
pyinstaller = "^5.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
