[tool.poetry]
name = "dijkstra-pathfind"
version = "0.1.0"
description = ""
authors = ["Steigner"]
license = "MIT"
readme = "README.md"
packages = [{include = "dijkstra_pathfind"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
geopy = "^2.3.0"
dash = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
